fix scrollable as auto  to card incase of overflow 'FAQ accordion'

--- a/faq-accordion/faq-accordion.css
+++ b/faq-accordion/faq-accordion.css
@@ -33,7 +33,7 @@ section{
     padding: 24px;
     box-sizing: border-box;
     box-shadow: 3px 0px 18px 4px hsla(293, 16%, 49%, 0.514);
-    overflow: scroll;
+    overflow: auto;
 }
 header{
     display: flex;
